CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(SQLitePlus)

SET(CMAKE_CXX_STANDARD 11)

# set compile flag
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")

# default build type, release
IF (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF (NOT CMAKE_BUILD_TYPE)

# find dependency
FIND_PACKAGE(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIR})

FIND_PACKAGE(SQLite3 REQUIRED)

# add executables
ADD_EXECUTABLE(SQLitePlus src/main.cpp src/SQLITE3.cpp include/SQLITE3.hpp include/SQLITE3_QUERY.hpp)

# link libraries
TARGET_LINK_LIBRARIES(SQLitePlus LINK_PUBLIC ${Boost_LIBRARIES} )
TARGET_LINK_LIBRARIES(SQLitePlus LINK_PUBLIC ${SQLite3_LIBRARIES})

