CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(SQLitePlusDemo)

# c++11 minimum
SET(CMAKE_CXX_STANDARD 11)

# github action cmake CI
ENABLE_TESTING()

# set compile flag
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")

# default build type, release
IF (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF (NOT CMAKE_BUILD_TYPE)

# find dependency
FIND_PACKAGE(SQLite3 REQUIRED)

# include library
INCLUDE_DIRECTORIES(./lib/include/)

# add executables and link library
ADD_EXECUTABLE(SQLitePlusDemo src/demo.cpp lib/include/SQLITE3_QUERY.hpp lib/include/SQLITE3.hpp)
TARGET_LINK_LIBRARIES(SQLitePlusDemo LINK_PUBLIC ${SQLite3_LIBRARIES})

# add SQLitePlus_SQLITE3_TEST
ADD_EXECUTABLE(SQLitePlus_SQLITE3_TEST test/SQLITE3_TEST.cpp lib/include/SQLITE3_QUERY.hpp lib/include/SQLITE3.hpp)
TARGET_LINK_LIBRARIES(SQLitePlus_SQLITE3_TEST LINK_PUBLIC ${SQLite3_LIBRARIES})
ADD_TEST(SQLitePlus_SQLITE3_TEST SQLitePlus_SQLITE3_TEST)

# add SQLitePlus_SQLITE3_QUERY_TEST
ADD_EXECUTABLE(SQLitePlus_SQLITE3_QUERY_TEST test/SQLITE3_QUERY_TEST.cpp lib/include/SQLITE3_QUERY.hpp)
ADD_TEST(SQLitePlus_SQLITE3_QUERY_TEST SQLitePlus_SQLITE3_QUERY_TEST)